# green-ecolution

./: .dockerignore  .editorconfig  .env.example  .envrc  .gitignore  .gitlab-ci.yml  .gitmodules  .mockery.yaml  .prettierignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  compose.app.yaml  compose.yaml  flake.nix  go.mod  go.sum  justfile  main.go  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  publiccode.yml  release-please-config.json
backend-rs/: .dockerignore  Cargo.toml  Dockerfile  build.rs
backend-rs/.sqlx/: query-006353878c6c6d6a7f21800e76a45d6b8b0d419b39ae54b3c6cefed4a1914ae2.json  query-00d8cd62339d3683865d5027126c9ef12e86a3b949abf0efe8aa9f0f63f17e4b.json  query-00f6bf9872573f5bb0f306c0dd20ac16c5f279aef2bd6a3bfb29fb1a7d40ff23.json  query-01b77e63e5af8a4cf38493956314b7d8c2d5ef1cc7cdaca8470957f9690cf44a.json  query-026b9ecc19adaa89879a4c2a4d7dacb76784e756fe892a8b3d481286ce952b10.json  query-02bb0509d597806854a2cde103d958938e5a5fce25c8fc9f1b86677bd3f529d2.json  query-02c6b225844314149739f35242a1b97733911417329032ca5c4478b8e2f28f54.json  query-03a7ef1c8630abdc02dd75bc43cdb55fe062b9200ea3a35c1b80a74fe470a0bc.json  query-041f16f2b6029cbef03003d3f4f5206dc9a4e60a445e0af8b02bf4c62af4266e.json  query-069996d03a58d0964d9f83e3a54bb64f8d09257a9cd1895db8f165a590a36d2c.json  query-06f03686b4720f1ee54399ce50f2434835b12515fc94cdd2456ba2bd5a3cebef.json  query-08566024fd165df5701fe1ff60b23afe16fe71cf1cc2e94714fd0f7bf99d8535.json  query-086c62275c17cb1a4ec8c9b1d713538feaed67c83d2969752ac2006ba9a04458.json  query-087cecc0e12a167f536c016199dd720bedff25a922bdcc57fd5ec22cf4e53559.json  query-08a4941ea804f8bb8e19651a6533610ae946f16ccd84d69eafffde709d38213e.json  query-08c60832d1edfe042988895aae4338812120e6de61593ddedc424d97467e1255.json  query-0b0215cd0794cdebdcd32768d176971523c156c91d9321c7fe0177e1c493023c.json  query-0be6d270de9935193d63901348b199bf0f89accdd260389ca6c0afbe9d82213b.json  query-0ced472581ef6a00fc10512894e22e8376b3afd6a0d76d78fca63c16cebfe9a8.json  query-0ef482709cad8d88e66f1e964c5872d8b381f8658ebf2bdda882190ec6a378fa.json  query-0f30a499ea33b3703d3c9b0d7ce143ca14159c9e3cea74637c238eed0c03ee06.json  query-0fb22ed8a2c213c75c823350790f7953b9b37a2a98df4d90e6853c28610c88a7.json  query-0fd67f667b8a92f03e53dd09e56858bdbbcf0fb81709004a4bbd8309e3aa8c50.json  query-114c19a191851f0c2947bc6cdee998ae47532c501e6b40645d64731e3227f789.json  query-142be2c81202e8b3fe512818e9257dc4776fee9ccccf32e120c965d8f83c2c80.json  query-1510c80c74fd8efaecc2ec187bb04c16314e639bc8c8e68a364a6fa0e8ed762b.json  query-161fcbd0dc9c826a929be78c096a29efec728791fd2bcaf4bc8c4ebe9edda020.json  query-16d9978d045751df74e2216b7584bf3780ff6ffa11706382e248a93a22551fe1.json  query-172390fe8c1614e879588434920d7f99246791798c6470131d69209b0e8cb7ed.json  query-194bc19655c16fd845a17b61c8b7ad60ed61697a5f11007e81b90f194eb97afc.json  query-19859d3cc40d7fd89c605e6dbae3832df43793ac167615cdc29e36da0c82b057.json  query-19860c9219c0c0903b03156f43467413950364c7df2e7b784900271d21d9084f.json  query-1a641aa0cf2519468d864f469155d791dcae5adb69e997a51cc34ace9f49e3a7.json  query-1a8cb23d6681d7052c1fae3c17b883081e7bbf316d924a1ad3efab27106cea0c.json  query-1b645060fd4a5842060018cd2f4961e11a3907411e6c47fb0607b996f22d59af.json  query-1b797048dcc89730d86af8656ed3da753515c0b0ae1e22d42a5b03412cce2862.json  query-1c224b1474d39885a2ea94f9c83ae54e3fa1a7f53ec342bb66234e870cbb1562.json  query-1d6988e324a028e7c163390dec7902a71a57ff58c59b91b341d0fa8279da8ff5.json  query-1f9af67969e533a430d80ba74f9777e52de45694e484b286cb0ef013948c7ea1.json  query-1fe651a68c2e5434a581a5afd0b067dae5582afd2367f2479b29784e2783aa10.json  (+202 more)
backend-rs/config/: base.yaml  local.yaml  production.yaml  staging.yaml
backend-rs/crates/domain/: Cargo.toml
backend-rs/crates/domain-wasm/: Cargo.toml
backend-rs/crates/server/: Cargo.toml  build.rs
backend-rs/migrations/: 20240825201224_release_1.sql  20241001174358_change_tree_table.sql  20241004173845_add_tree_description.sql  20241101175600_add_on_delete_cascade_to_sensor_data.sql  20241110113135_add_type_and_status_to_vehicle_table.sql  20241116113618_delete_user_vehicles_table.sql  20241116114711_add_unique_constraint_to_vehicle_number_plate.sql  20241121210057_edit_sensor_database.sql  20241217134930_rename_tree_number_to_number.sql  20241217141135_rename_watering_plan_status_to_status.sql  20241220100452_add_cancel_note_to_watering_plan.sql  20241221123720_add_consumed_water_to_relation_table_of_cluster_and_watering_plan.sql  20250112120233_watering_plan_add_duration_and_refills.sql  20250117100855_add_ce_to_driving_license_enum.sql  20250129121559_add_provider.sql  20250221185223_remove_readonly_in_tree.sql  20250223160932_add_archive_vehicle.sql  20260429070118_add_performance_indexes.sql  20260503090000_remove_unknown_vehicle_type.sql  20260518090000_migrate_int_ids_to_uuid_v7_from_created_at.sql  20260527124125_add_volt_unit_to_sensor_ability.sql  20260527124126_extend_ges_1000_with_temperature_and_battery.sql  20260527124128_fix_watering_plan_status_typo.sql  20260527124129_migrate_soil_condition_to_ka5.sql  20260702183955_add_watering_plan_junction_indexes.sql
backend-rs/seeds/: 01_regions.down.sql  01_regions.sql  02_real_data.down.sql  02_real_data.sql  99_demo_data.down.sql  99_demo_data.sql
backend-rs/src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
backend-rs/src/domain/: auth.rs  cluster.rs  evaluation.rs  events.rs  info.rs  mod.rs  plugin.rs  region.rs  sensor.rs  tree.rs  user.rs  vehicle.rs  watering_plan.rs
backend-rs/src/http/: error.rs  mod.rs  pagination.rs  region.rs  tracing.rs
backend-rs/src/infra/: mod.rs  mqtt.rs  pg_cluster.rs  pg_evaluation.rs  pg_region.rs  pg_sensor.rs  pg_tree.rs  pg_vehicle.rs  pg_watering_plan.rs  system_info.rs
backend-rs/src/service/: auth_service.rs  cluster_service.rs  evaluation_service.rs  event_bus.rs  mod.rs  region_service.rs  sensor_service.rs  tree_service.rs  user_service.rs  vehicle_service.rs  watering_execution_service.rs  watering_plan_service.rs
backend-rs/test/api/: auth.rs  (+10 more)
(+2375 files in other folders)
