[package]
name = "green-ecolution"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Smart irrigation and green-space management platform"
authors = ["Cedrik Hoffmann <choffmann@green-ecolution.de>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/green-ecolution/green-ecolution"
homepage = "https://green-ecolution.de"
readme = "../README.md"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "green-ecolution"

[[test]]
name = "api"
path = "test/api/main.rs"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["json"] }
chrono = "0.4.44"
config = "0.15.22"
futures = "0.3"
hostname = "0.4"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2.5.8"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[dev-dependencies]
claims = "0.8"
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
testcontainers = "0.25"
testcontainers-modules = { version = "0.13", features = ["postgres"] }
uuid = { version = "1", features = ["v4"] }
wiremock = "0.6.5"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
