[workspace]
resolver = "3"
members = ["crates/server", "crates/domain", "crates/domain-wasm"]

[workspace.package]
version = "0.3.0" # x-release-please-version
edition = "2024"
rust-version = "1.88"
authors = ["Cedrik Hoffmann <choffmann@green-ecolution.de>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/green-ecolution/green-ecolution"
homepage = "https://green-ecolution.de"
publish = false

[workspace.dependencies]
# Shared across all workspace crates.
async-trait = "0.1.89"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8.6", default-features = false }
thiserror = "2.0.18"
url = "2.5.8"
uuid = { version = "1", features = ["v4", "v7", "serde"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
