[package]
name = "domain-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Green Ecolution domain WASM bindings"
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
domain = { path = "../domain" }
wasm-bindgen = "0.2.100"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
serde_json = { workspace = true }
