[package]
name = "domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Green Ecolution domain layer (portable)"
readme = "../../../README.md"
publish.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
# Aktiviert sqlx::Type-Derives auf Domain-Enums. Nur für Server-Konsumenten.
sqlx = ["dep:sqlx"]

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde", "wasmbind"] }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = "2.5.8"
uuid = { workspace = true }

# Optional, nur wenn `sqlx`-Feature aktiv ist.
sqlx = { version = "0.8.6", features = ["postgres", "chrono", "uuid", "json"], optional = true }

[dev-dependencies]
claims = "0.8"
quickcheck = "1"
quickcheck_macros = "1"
