[package]
name = "domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Green Ecolution domain layer"
readme = "../../../README.md"
publish.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
sqlx = ["dep:sqlx"]

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde", "wasmbind"] }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

# Optional, nur wenn `sqlx`-Feature aktiv ist.
sqlx = { workspace = true, features = ["derive", "postgres", "chrono", "uuid", "json"], optional = true }

[dev-dependencies]
claims = "0.8"
quickcheck = "1"
quickcheck_macros = "1"
